--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-mentions": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "sketch-module-user-preferences": "^1.0.2",
     "sketch-module-web-view": "^1.1.4",
